cleanup architectures.ipynb

--- a/architectures.ipynb
+++ b/architectures.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ZigZag API Demonstration: \n",
-    "## A hardware architecture comparison demo\n",
+    "## A hardware architecture comparison\n",
+    "\n",
     "In this demo, we use ZigZag to optimize the mapping of AlexNet onto a TPU-like architecture.\n",
-    "Any ONNX model can be supplied, alongside an already implemented architecture, or a custom architecture, wich we don't get into in this first demonstration.\n"
+    "Any ONNX model can be supplied, alongside an already implemented architecture, or a custom architecture, wich we don't get into in this first demonstration.\n",
+    "\n",
+    "ZigZag provides quick insight into what makes an architecture good, due to it's analytical cost model evaluation. This is valuable to architectural designers.\n"
    ]
   },
   {
