--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -15,8 +15,8 @@
     "                                                        accelerator,\n",
     "                                                        mapping=None,\n",
     "                                                        opt='latency',\n",
-    "                                                        dump_filename_pattern\",\n",
-    "                                                        pickle_filename\")\n",
+    "                                                        dump_filename_pattern=\"outputs/{datetime}.json\",\n",
+    "                                                        pickle_filename=\"outputs/list_of_cmes.pickle\"):\n",
     "```\n",
     "##### Inputs to the function\n",
     "- **workload**: A neural network model defined in ONNX format or ZigZag's own format.\n",
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3) Run ZigZag API"
+    "### 3) Run ZigZag API function"
    ]
   },
   {
@@ -71,57 +71,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-07 20:47:42,203 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:47:42,208 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:47:42,209 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:47:42,210 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:47:42,211 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:47:42,212 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:47:42,212 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:47:42,213 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:47:42,213 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
-      "2023-02-07 20:47:42,214 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-07 20:47:42,215 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:47:42,216 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 424.40it/s]\n",
-      "2023-02-07 20:47:43,934 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_0.json\n",
-      "2023-02-07 20:47:43,934 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-07 20:47:43,935 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:47:43,935 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 432.87it/s]\n",
-      "2023-02-07 20:47:55,584 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_4.json\n",
-      "2023-02-07 20:47:55,587 - run +33 - INFO - Processing layer 8...\n",
-      "2023-02-07 20:47:55,588 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:47:55,588 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 430.64it/s]\n",
-      "2023-02-07 20:47:57,266 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_8.json\n",
-      "2023-02-07 20:47:57,267 - run +33 - INFO - Processing layer 10...\n",
-      "2023-02-07 20:47:57,268 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:47:57,269 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 428.08it/s]\n",
-      "2023-02-07 20:48:09,049 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_10.json\n",
-      "2023-02-07 20:48:09,050 - run +33 - INFO - Processing layer 12...\n",
-      "2023-02-07 20:48:09,051 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:48:09,052 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 424.96it/s]\n",
-      "2023-02-07 20:48:20,918 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-AlexNet-layer_LayerNode_12.json\n",
-      "2023-02-07 20:48:20,920 - run +33 - INFO - Processing layer 16...\n",
-      "2023-02-07 20:48:20,921 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:48:20,922 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 557.52it/s]\n",
-      "2023-02-07 20:48:22,219 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_16.json\n",
-      "2023-02-07 20:48:22,220 - run +33 - INFO - Processing layer 19...\n",
-      "2023-02-07 20:48:22,221 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:48:22,221 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 559.29it/s]\n",
-      "2023-02-07 20:48:23,515 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_19.json\n",
-      "2023-02-07 20:48:23,517 - run +33 - INFO - Processing layer 22...\n",
-      "2023-02-07 20:48:23,518 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:48:23,518 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 120/120 [00:00<00:00, 482.82it/s]\n",
-      "2023-02-07 20:48:23,774 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_22.json\n",
-      "2023-02-07 20:48:23,778 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-AlexNet-layer_overall.json\n",
-      "2023-02-07 20:48:23,787 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-AlexNet-saved_list_of_cmes.pickle.\n"
+      "2023-02-07 20:57:57,378 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 20:57:57,379 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 20:57:57,380 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 20:57:57,381 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 20:57:57,382 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 20:57:57,382 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 20:57:57,383 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 20:57:57,384 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 20:57:57,384 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
+      "2023-02-07 20:57:57,385 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-07 20:57:57,386 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:57:57,386 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 439.03it/s]\n",
+      "2023-02-07 20:57:59,039 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_0.json\n",
+      "2023-02-07 20:57:59,040 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-07 20:57:59,041 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:57:59,041 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 441.06it/s]\n",
+      "2023-02-07 20:58:10,474 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_4.json\n",
+      "2023-02-07 20:58:10,478 - run +33 - INFO - Processing layer 8...\n",
+      "2023-02-07 20:58:10,478 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:10,479 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 440.23it/s]\n",
+      "2023-02-07 20:58:12,120 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_8.json\n",
+      "2023-02-07 20:58:12,122 - run +33 - INFO - Processing layer 10...\n",
+      "2023-02-07 20:58:12,122 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:12,123 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 436.88it/s]\n",
+      "2023-02-07 20:58:23,666 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_10.json\n",
+      "2023-02-07 20:58:23,668 - run +33 - INFO - Processing layer 12...\n",
+      "2023-02-07 20:58:23,668 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:23,669 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:11<00:00, 435.90it/s]\n",
+      "2023-02-07 20:58:35,239 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-AlexNet-layer_LayerNode_12.json\n",
+      "2023-02-07 20:58:35,240 - run +33 - INFO - Processing layer 16...\n",
+      "2023-02-07 20:58:35,241 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:35,241 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 571.75it/s]\n",
+      "2023-02-07 20:58:36,510 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_16.json\n",
+      "2023-02-07 20:58:36,511 - run +33 - INFO - Processing layer 19...\n",
+      "2023-02-07 20:58:36,512 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:36,514 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 560.95it/s]\n",
+      "2023-02-07 20:58:37,803 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_19.json\n",
+      "2023-02-07 20:58:37,804 - run +33 - INFO - Processing layer 22...\n",
+      "2023-02-07 20:58:37,804 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 20:58:37,804 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 120/120 [00:00<00:00, 450.63it/s]\n",
+      "2023-02-07 20:58:38,076 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_22.json\n",
+      "2023-02-07 20:58:38,079 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-AlexNet-layer_overall.json\n",
+      "2023-02-07 20:58:38,088 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-AlexNet-saved_list_of_cmes.pickle.\n"
      ]
     }
    ],
@@ -199,7 +199,8 @@
     "    breakdown_cmes = pickle.load(fp)\n",
     "\n",
     "# Plot all the layers and save to 'plot_all.png'\n",
-    "bar_plot_cost_model_evaluations_breakdown(breakdown_cmes[:5], save_path=\"plot_breakdown.png\")\n"
+    "bar_plot_cost_model_evaluations_breakdown(breakdown_cmes[:5], save_path=\"plot_breakdown.png\")  # plot for the first 5 layers\n",
+    "# bar_plot_cost_model_evaluations_breakdown(breakdown_cmes, save_path=\"plot_breakdown.png\")  # plot for all the layers"
    ]
   },
   {
