update Demo1 and Demo2

--- a/Demo1.ipynb
+++ b/Demo1.ipynb
@@ -11,7 +11,7 @@
     "### 1) Explain the API function\n",
     "\n",
     "```\n",
-    "energy, latency, cmes = get_hardware_performance_zigzag(workload,\n",
+    "energy, latency, cme = get_hardware_performance_zigzag(workload,\n",
     "                                                        accelerator,\n",
     "                                                        mapping=None,\n",
     "                                                        opt='latency',\n",
@@ -30,7 +30,7 @@
     "##### Output of the function\n",
     "- **energy**: A number that indicates the overall consumed energy for running the workload on the accelerator in the user-defined optimized way.\n",
     "- **latency**: A number that indicates the overall latency (cycle count) for running the workload on the accelerator in the user-defined optimized way.\n",
-    "- **cmes**: A collection of all the detailed cost model evaluation results. \"cme\" stands for \"cost model evaluation\".\n",
+    "- **cme**: A collection of all the detailed cost model evaluation results. \"cme\" stands for \"cost model evaluation\".\n",
     "\n",
     "\n",
     "\n",
@@ -44,7 +44,9 @@
    "outputs": [],
    "source": [
     "# Get the workload\n",
-    "onnx_model_path = \"alexnet.onnx\"\n",
+    "model = \"alexnet\"\n",
+    "# model = \"mobilenetv2\"  # uncomment this to try a second workload\n",
+    "onnx_model_path = f\"{model}.onnx\"\n",
     "workload = onnx_model_path\n",
     "\n",
     "# Get the accelerator and mapping\n",
@@ -52,8 +54,8 @@
     "from zigzag.inputs.examples.hardware.Edge_TPU_like import accelerator as accelerator\n",
     "\n",
     "# Set the filenames\n",
-    "dump_filename_pattern=f\"outputs/Edge_TPU-AlexNet-layer_?.json\"\n",
-    "pickle_filename = \"outputs/Edge_TPU-AlexNet-saved_list_of_cmes.pickle\""
+    "dump_filename_pattern=f\"outputs/Edge_TPU-{model}-layer_?.json\"\n",
+    "pickle_filename = f\"outputs/Edge_TPU-{model}-saved_list_of_cmes.pickle\""
    ]
   },
   {
@@ -71,69 +73,69 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-07 20:57:57,378 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:57:57,379 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:57:57,380 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:57:57,381 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:57:57,382 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
-      "2023-02-07 20:57:57,382 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:57:57,383 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:57:57,384 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
-      "2023-02-07 20:57:57,384 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
-      "2023-02-07 20:57:57,385 - run +33 - INFO - Processing layer 0...\n",
-      "2023-02-07 20:57:57,386 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:57:57,386 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 439.03it/s]\n",
-      "2023-02-07 20:57:59,039 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_0.json\n",
-      "2023-02-07 20:57:59,040 - run +33 - INFO - Processing layer 4...\n",
-      "2023-02-07 20:57:59,041 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:57:59,041 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 441.06it/s]\n",
-      "2023-02-07 20:58:10,474 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_4.json\n",
-      "2023-02-07 20:58:10,478 - run +33 - INFO - Processing layer 8...\n",
-      "2023-02-07 20:58:10,478 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:10,479 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 440.23it/s]\n",
-      "2023-02-07 20:58:12,120 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_8.json\n",
-      "2023-02-07 20:58:12,122 - run +33 - INFO - Processing layer 10...\n",
-      "2023-02-07 20:58:12,122 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:12,123 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 436.88it/s]\n",
-      "2023-02-07 20:58:23,666 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_10.json\n",
-      "2023-02-07 20:58:23,668 - run +33 - INFO - Processing layer 12...\n",
-      "2023-02-07 20:58:23,668 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:23,669 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 5040/5040 [00:11<00:00, 435.90it/s]\n",
-      "2023-02-07 20:58:35,239 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-AlexNet-layer_LayerNode_12.json\n",
-      "2023-02-07 20:58:35,240 - run +33 - INFO - Processing layer 16...\n",
-      "2023-02-07 20:58:35,241 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:35,241 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 571.75it/s]\n",
-      "2023-02-07 20:58:36,510 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_16.json\n",
-      "2023-02-07 20:58:36,511 - run +33 - INFO - Processing layer 19...\n",
-      "2023-02-07 20:58:36,512 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:36,514 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 720/720 [00:01<00:00, 560.95it/s]\n",
-      "2023-02-07 20:58:37,803 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-AlexNet-layer_LayerNode_19.json\n",
-      "2023-02-07 20:58:37,804 - run +33 - INFO - Processing layer 22...\n",
-      "2023-02-07 20:58:37,804 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
-      "2023-02-07 20:58:37,804 - run +82 - INFO - Running temporal mapping search engine...\n",
-      "100%|██████████| 120/120 [00:00<00:00, 450.63it/s]\n",
-      "2023-02-07 20:58:38,076 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-AlexNet-layer_LayerNode_22.json\n",
-      "2023-02-07 20:58:38,079 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-AlexNet-layer_overall.json\n",
-      "2023-02-07 20:58:38,088 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-AlexNet-saved_list_of_cmes.pickle.\n"
+      "2023-02-07 22:46:24,297 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 22:46:24,299 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 22:46:24,300 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 22:46:24,301 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 22:46:24,303 - generate_layer_node_for_conv +175 - INFO - Parsed Conv node \n",
+      "2023-02-07 22:46:24,304 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 22:46:24,305 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 22:46:24,306 - generate_layer_node_for_gemm +112 - INFO - Parsed Gemm node \n",
+      "2023-02-07 22:46:24,306 - parse_workload_from_onnx_model_and_mapping +101 - INFO - Created ONNXWorkload graph with 24 nodes and 23 edges.\n",
+      "2023-02-07 22:46:24,307 - run +33 - INFO - Processing layer 0...\n",
+      "2023-02-07 22:46:24,308 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:46:24,309 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 389.92it/s]\n",
+      "2023-02-07 22:46:26,166 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_0, core=1) with energy 6.628e+07 and latency 3.410e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_0.json\n",
+      "2023-02-07 22:46:26,166 - run +33 - INFO - Processing layer 4...\n",
+      "2023-02-07 22:46:26,167 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:46:26,168 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 380.62it/s]\n",
+      "2023-02-07 22:46:39,414 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_4, core=1) with energy 9.223e+07 and latency 2.684e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_4.json\n",
+      "2023-02-07 22:46:39,418 - run +33 - INFO - Processing layer 8...\n",
+      "2023-02-07 22:46:39,419 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:46:39,420 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 375.94it/s]\n",
+      "2023-02-07 22:46:41,343 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_8, core=1) with energy 1.214e+08 and latency 2.307e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_8.json\n",
+      "2023-02-07 22:46:41,344 - run +33 - INFO - Processing layer 10...\n",
+      "2023-02-07 22:46:41,344 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:46:41,345 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 361.74it/s]\n",
+      "2023-02-07 22:46:55,284 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_10, core=1) with energy 9.485e+07 and latency 1.071e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_10.json\n",
+      "2023-02-07 22:46:55,285 - run +33 - INFO - Processing layer 12...\n",
+      "2023-02-07 22:46:55,286 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:46:55,287 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 5040/5040 [00:13<00:00, 375.65it/s]\n",
+      "2023-02-07 22:47:08,716 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_12, core=1) with energy 6.487e+07 and latency 7.373e+04 to outputs/Edge_TPU-alexnet-layer_LayerNode_12.json\n",
+      "2023-02-07 22:47:08,718 - run +33 - INFO - Processing layer 16...\n",
+      "2023-02-07 22:47:08,718 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:47:08,719 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 496.55it/s]\n",
+      "2023-02-07 22:47:10,174 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_16, core=1) with energy 3.359e+09 and latency 4.719e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_16.json\n",
+      "2023-02-07 22:47:10,177 - run +33 - INFO - Processing layer 19...\n",
+      "2023-02-07 22:47:10,184 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:47:10,185 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 720/720 [00:01<00:00, 493.04it/s]\n",
+      "2023-02-07 22:47:11,652 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_19, core=1) with energy 1.493e+09 and latency 2.098e+06 to outputs/Edge_TPU-alexnet-layer_LayerNode_19.json\n",
+      "2023-02-07 22:47:11,653 - run +33 - INFO - Processing layer 22...\n",
+      "2023-02-07 22:47:11,654 - run +81 - INFO - Launching spatial mapping 1/1: {'D1': ('K', 8), 'D2': ('C', 8), 'D3': ('OX', 4), 'D4': ('OY', 4)}.\n",
+      "2023-02-07 22:47:11,654 - run +82 - INFO - Running temporal mapping search engine...\n",
+      "100%|██████████| 120/120 [00:00<00:00, 451.30it/s]\n",
+      "2023-02-07 22:47:11,926 - run +44 - INFO - Saved CostModelEvaluation(layer=LayerNode_22, core=1) with energy 3.648e+08 and latency 5.126e+05 to outputs/Edge_TPU-alexnet-layer_LayerNode_22.json\n",
+      "2023-02-07 22:47:11,930 - run +97 - INFO - Saved CostModelEvaluation(layer=[0, 4, 8, 10, 12, 16, 19, 22], core=[1, 1, 1, 1, 1, 1, 1, 1]) with energy 5.656e+09 and latency 8.351e+06 to outputs/Edge_TPU-alexnet-layer_overall.json\n",
+      "2023-02-07 22:47:11,945 - run +149 - INFO - Saved pickled list of 8 CMEs to outputs/Edge_TPU-alexnet-saved_list_of_cmes.pickle.\n"
      ]
     }
    ],
    "source": [
     "from zigzag.api import get_hardware_performance_zigzag\n",
     "\n",
-    "energy, latency, cmes = get_hardware_performance_zigzag(workload=workload,\n",
-    "                                                        accelerator=accelerator,\n",
-    "                                                        mapping=mapping,\n",
-    "                                                        opt='energy',\n",
-    "                                                        dump_filename_pattern=dump_filename_pattern,\n",
-    "                                                        pickle_filename=pickle_filename)"
+    "energy, latency, cme = get_hardware_performance_zigzag(workload=workload,\n",
+    "                                                       accelerator=accelerator,\n",
+    "                                                       mapping=mapping,\n",
+    "                                                       opt='energy',\n",
+    "                                                       dump_filename_pattern=dump_filename_pattern,\n",
+    "                                                       pickle_filename=pickle_filename)"
    ],
    "metadata": {
     "collapsed": false
@@ -196,11 +198,11 @@
     "\n",
     "# Load in the pickled list of CMEs\n",
     "with open(pickle_filename, 'rb') as fp:\n",
-    "    breakdown_cmes = pickle.load(fp)\n",
+    "    cme = pickle.load(fp)\n",
     "\n",
     "# Plot all the layers and save to 'plot_all.png'\n",
-    "bar_plot_cost_model_evaluations_breakdown(breakdown_cmes[:5], save_path=\"plot_breakdown.png\")  # plot for the first 5 layers\n",
-    "# bar_plot_cost_model_evaluations_breakdown(breakdown_cmes, save_path=\"plot_breakdown.png\")  # plot for all the layers"
+    "bar_plot_cost_model_evaluations_breakdown(cme[:5], save_path=\"plot_breakdown.png\")  # plot for the first 5 layers\n",
+    "# bar_plot_cost_model_evaluations_breakdown(cme, save_path=\"plot_breakdown.png\")  # plot for all the layers"
    ]
   },
   {
